src/sections/LogIn.css
body{
    background-color: rgb(4, 6, 12);
}

.login{
    min-height: 100vh;
    display: flex;
    align-items: center;
    padding: 30px;
}

.webflow-style-input {
    border: 2px rgba(57, 63, 84, 0.8) solid;
    padding: 30px 15px;
    position: relative;
    display: flex;
    flex-direction: column;
    gap: 15px;
    width: 100%;
    max-width: 450px;
    margin: 0 auto;
    border-radius: 2px;
    /* padding: 1.4rem 2rem 1.6rem; */
    
}

.webflow-style-input button:after {
    content: "";
    position: absolute;
    left: 0px;
    right: 0px;
    bottom: 0px;
    z-index: 999;
    height: 2px;
    border-bottom-left-radius: 2px;
    border-bottom-right-radius: 2px;
    background-position: 0% 0%;
    background: linear-gradient(to right, #B294FF, #57E6E6, #FEFFB8, #57E6E6, #B294FF, #57E6E6);
    background-size: 500% auto;
    animation: gradient 3s linear infinite;
}

.webflow-style-input input {
    flex-grow: 1;
    color: #BFD2FF;
    display: block;
    font-size: 1.8rem;
    padding: 0 15px;
    /* width: 150px; */
    line-height: 2.4rem;
    /* vertical-align: middle; */
    height: 55px;
    background: rgba(57, 63, 84, 0.8);
}
.webflow-style-input input::-webkit-input-placeholder {
    color: #7881A1;
}

.webflow-style-input button {
    /* color: #7881A1; */
    color: #BFD2FF;
    padding: 0 15px;
    height: 55px;
    font-size: 2.4rem;
    line-height: 2.4rem;
    position: relative;
    vertical-align: middle;
    transition: color .25s;
    cursor: pointer;
    transition: .3s;
    background: rgb(33, 35, 48);
}

.webflow-style-input button:hover {
    background: rgba(57, 63, 84, 0.8);
}

form h2{
    color: rgba(255, 255, 255, 0.8);
    text-align: center;
    margin-bottom: 0;
}

form h2 span{
    color: rgb(255, 255, 255);
    text-decoration: underline;
    cursor: pointer;

}

